--- a/src/main/resources/ValidationMessages.properties
+++ b/src/main/resources/ValidationMessages.properties
@@ -10,3 +10,4 @@ income.invalid.month=Please select a month
 income.invalid.amount=Please enter a valid amount
 income.invalid.receiveddate=Please select a valid date
 contact.subject.invalid=Please select a subject
+blog.title.invalid=Title must be between {min} and {max} characters
