add initial security module

--- a/src/main/resources/ValidationMessages.properties
+++ b/src/main/resources/ValidationMessages.properties
@@ -2,12 +2,13 @@ category.invalid.name=Please enter a valid category name
 category.invalid.select=Please select a category
 password.invalid=Enter a password between {min} and {max} characters
 name.invalid=Name must be between {min} and {max} characters
-email.invalid=Please provide a valid email address
 product.invalid.name=Product name must be between {min} and {max} characters
-product.name.empty=Please provide a valid name
+name.invalid=Name must be between {min} and {max} characters
+email.invalid=Please provide a valid email address
 income.invalid.name=Please select a name
 income.invalid.month=Please select a month
 income.invalid.amount=Please enter a valid amount
 income.invalid.receiveddate=Please select a valid date
 contact.subject.invalid=Please select a subject
 blog.title.invalid=Title must be between {min} and {max} characters
+blog.description.invalid=Description must be between {min} and {max} characters
