--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,7 +18,7 @@ dataSource.prepStmtCacheSize=250
 dataSource.prepStmtCacheSqlLimit=2048
 
 # Show or not log for each sql query
-#spring.jpa.show-sql = true
+spring.jpa.show-sql = true
 
 # Hibernate ddl auto (create, create-drop, update)
 # dont use in production
@@ -26,6 +26,7 @@ spring.jpa.hibernate.ddl-auto = update
 
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
+spring.jpa.hibernate.naming-strategy = org.hibernate.cfg.ImprovedNamingStrategy
 
 #File Upload size
 spring.http.multipart.max-file-size=10MB
@@ -38,4 +39,4 @@ spring.jpa.properties.hibernate.current_session_context_class=org.springframewor
 # = Spring Security / Queries for AuthenticationManagerBuilder  
 # ==============================================================
 spring.queries.users-query=select email, password, active from user where email=?
-spring.queries.roles-query=select u.email, r.role from user u inner join user_role ur on(u.user_id=ur.user_id) inner join role r on(ur.role_id=r.role_id) where u.email=?
+spring.queries.roles-query=select u.email, r.role from user u inner join user_role ur on(u.id=ur.user_id) inner join role r on(ur.role_id=r.id) where u.email=?
