--- a/pom.xml
+++ b/pom.xml
@@ -69,6 +69,15 @@
 			<artifactId>commons-lang</artifactId>
 			<version>2.6</version>
 		</dependency>
+		<!-- sending email -->
+		<!-- <dependency> <groupId>org.springframework.boot</groupId> <artifactId>spring-boot-starter-mail</artifactId> 
+			</dependency> -->
+		<!-- https://mvnrepository.com/artifact/it.ozimov/spring-boot-email-core -->
+		<dependency>
+			<groupId>it.ozimov</groupId>
+			<artifactId>spring-boot-thymeleaf-email</artifactId>
+			<version>0.6.2</version>
+		</dependency>
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
