--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -40,3 +40,15 @@ spring.jpa.properties.hibernate.current_session_context_class=org.springframewor
 # ==============================================================
 spring.queries.users-query=select email, password, active from user where email=?
 spring.queries.roles-query=select u.email, r.role from user u inner join user_role ur on(u.id=ur.user_id) inner join role r on(ur.role_id=r.id) where u.email=?
+
+# =====================================================
+# sending email
+# =====================================================
+spring.mail.host=smtp.gmail.com
+spring.mail.port: 587
+spring.mail.username=kasturitech16@gmail.com
+spring.mail.password=kasturi66
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable: true
+spring.mail.properties.mail.smtp.starttls.required: true
+support.email=info@budthapa.pro
