add redis for session handling and redirect previously logged in user

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -52,3 +52,11 @@ spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable: true
 spring.mail.properties.mail.smtp.starttls.required: true
 support.email=info@budthapa.pro
+
+# =====================================================
+# redis for session management
+# =====================================================
+spring.session.store-type=redis
+server.session.timeout=5
+spring.redis.host=localhost
+spring.redis.port=6379
