--- a/pom.xml
+++ b/pom.xml
@@ -78,6 +78,20 @@
 			<artifactId>spring-boot-thymeleaf-email</artifactId>
 			<version>0.6.2</version>
 		</dependency>
+		<!-- session management -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-redis</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.session</groupId>
+			<artifactId>spring-session</artifactId>
+		</dependency>
+		
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-pool2</artifactId>
+		</dependency>
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
