--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -60,3 +60,9 @@ spring.session.store-type=redis
 server.session.timeout=5
 spring.redis.host=localhost
 spring.redis.port=6379
+# =====================================================
+# compression of response file
+# =====================================================
+
+server.compression.enabled=true
+server.compression.mime-types=application/json,application/xml,text/html,text/xml,text/plain
