--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -66,3 +66,4 @@ spring.redis.port=6379
 
 server.compression.enabled=true
 server.compression.mime-types=application/json,application/xml,text/html,text/xml,text/plain
+server.port=8081
