add geolite2 location

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -67,3 +67,10 @@ spring.redis.port=6379
 server.compression.enabled=true
 server.compression.mime-types=application/json,application/xml,text/html,text/xml,text/plain
 server.port=8081
+
+# =====================================================
+# compression of response file
+# =====================================================
+logging.file=profile-app.log
+logging.level.*=Debug
+logging.path=/var/log
