--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -20,9 +20,6 @@ dataSource.prepStmtCacheSqlLimit=2048
 
 # Show or not log for each sql query
 spring.jpa.show-sql = true
-
-# Hibernate ddl auto (create, create-drop, update)
-# dont use in production
 spring.jpa.hibernate.ddl-auto = update
 
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
@@ -67,7 +64,7 @@ spring.redis.port=6379
 
 server.compression.enabled=true
 server.compression.mime-types=application/json,application/xml,text/html,text/xml,text/plain
-server.port=8081
+server.port=80
 
 # =====================================================
 # compression of response file
@@ -79,6 +76,6 @@ logging.path=/var/log
 # =====================================================
 # Path for GeoLite2-City.mmdb
 # =====================================================
-geolite-location=/home/budthapa/
+geolite-location=/root/budthapa.pro/
 geolite-filename=GeoLite2-City.mmdb
 server-address=47.74.158.133
