added google tracking

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -55,7 +55,8 @@ support.email=info@budthapa.pro
 # redis for session management
 # =====================================================
 spring.session.store-type=redis
-server.session.timeout=5
+#server session timeout 10 minutes
+server.session.timeout=10
 spring.redis.host=localhost
 spring.redis.port=6379
 # =====================================================
