--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -19,7 +19,7 @@ dataSource.prepStmtCacheSize=250
 dataSource.prepStmtCacheSqlLimit=2048
 
 # Show or not log for each sql query
-spring.jpa.show-sql = true
+spring.jpa.show-sql = false
 spring.jpa.hibernate.ddl-auto = update
 
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
