--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,4 +1,4 @@
-//spring.profiles.active=prod
+spring.profiles.active=prod
 #######################
 # Database
 #######################
@@ -80,3 +80,10 @@ logging.path=/var/log
 geolite-location=/root/budthapa.pro/
 geolite-filename=GeoLite2-City.mmdb
 server-address=47.74.158.133
+
+# =====================================================
+# Recaptcha
+# =====================================================
+recaptcha.validation.verificationUrl=https://www.google.com/recaptcha/api/siteverify
+recaptcha.site-key=6Le62h8UAAAAAJQ5sOUonQkrwZsgY-LeYwpSSyc9
+recaptcha.validation.secretKey=6Le62h8UAAAAAF3LQ577DVy8jI0bWRyKcVZZb7vu
