--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
-//spring.profiles.active=prod
+spring.profiles.active=dev
+
 #######################
 # Database
 #######################
@@ -83,3 +84,10 @@ logging.path=/var/log
 geolite-location=/home/budthapa/
 geolite-filename=GeoLite2-City.mmdb
 server-address=47.74.158.133
+
+# =====================================================
+# Recaptcha
+# =====================================================
+recaptcha.validation.verificationUrl=https://www.google.com/recaptcha/api/siteverify
+recaptcha.site-key=6Le92h8UAAAAAD98tc-H7YElFW2NqbNRhFT3x45M
+recaptcha.validation.secretKey=6Le92h8UAAAAAH4ria5_VmTtu61n-6JmdOnKPF5v
