--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -91,3 +91,10 @@ server-address=47.74.158.133
 recaptcha.validation.verificationUrl=https://www.google.com/recaptcha/api/siteverify
 recaptcha.site-key=6Le92h8UAAAAAD98tc-H7YElFW2NqbNRhFT3x45M
 recaptcha.validation.secretKey=6Le92h8UAAAAAH4ria5_VmTtu61n-6JmdOnKPF5v
+
+# =====================================================
+# Caching
+# =====================================================
+spring.cache.type=caffeine
+spring.cache.cache-names=showBlogById
+spring.cache.caffeine.spec=expireAfterAccess=300s
