--- a/pom.xml
+++ b/pom.xml
@@ -136,6 +136,7 @@
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
 		</plugins>
+		<finalName>docker-buddhi-profile</finalName>
 	</build>
 
 
